[package]
name = "free"
version = "2019.11.29"
authors = ["Austin Barrett <austin@stripedpurple.io"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.5.8"
getopts = "0.2.21"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false